fix: corect the alignment of social media links in navbar

--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -1,4 +1,5 @@
 .navbar {
+  padding: 0 15px 0 15px;
   font-family: 'Press Start 2P', cursive;
   background-color: rgb(218, 218, 218);
   .navbar-collapse .navbar-nav .nav-link {
@@ -8,11 +9,14 @@
       color: #06e331;
     }
   }
-  .navIcon {
-    width: 30px;
-    height: 30px;
-    float: right;
-    margin-left: 15px;
+  .externalLinks {
+    margin-left: auto;
+    order: 2;
+    .navIcon {
+      width: 30px;
+      height: 30px;
+      margin-right: 15px;
+    }
   }
 }
 
